# Digital_Filters_2026

./: .gitignore  pyproject.toml
Assignments/Assignment-1/: DF_Assignment1_Ahmed_Zuhayr_2307677.ipynb  DF_Assignment1_Ahmed_Zuhayr_2307677.md
Assignments/Assignment-2/: DF_Assignment2.ipynb  DF_Assignment2_Ahmed_Zuhayr_2307677.ipynb  DF_Assignment2_Ahmed_Zuhayr_2307677.md
Assignments/Assignment-3/: DF_Assignment3_Ahmed_Zuhayr_2307677.ipynb  dftools.py
Assignments/Assignment-4/: DF_Assignment4_Ahmed_Zuhayr_2307677.ipynb
Assignments/Assignment-5/: DF_Assignment5_Ahmed_Zuhayr_2307677.ipynb
Assignments/Assignment-6/: DF_Assignment6_Ahmed_Zuhayr_2307677.ipynb
Lecture_Notebooks/: 1_Introduction.ipynb
